tests/algorithms/x/Pascal/digital_image_processing/resize/resize.error
compile: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/algorithms/x/Pascal/digital_image_processing/resize/resize.pas
resize.pas(144,30) Error: Incompatible type for arg no. 1: Got "IntArrayArrayArray", expected "{Open} Array Of IntArray"
resize.pas(159) Fatal: There were 1 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
